# database-from-scratch

./: .gitignore  Cargo.toml  README.md  sonar-project.properties  test.db
.github/workflows/: coverage.yml
src/: lib.rs  main.rs  prelude.rs
src/b_tree/: b_node.rs  b_tree.rs  btree_iter.rs  mod.rs
src/free_list/: cloneable.rs  fl_node.rs  free_list.rs  master_page.rs  mmap.rs  mod.rs  page.rs  page_manager.rs
src/kv_store/: kv_store.rs  mmap.rs  mod.rs  page.rs
src/relational_db/: mod.rs  records.rs  requests.rs  scanner.rs  tables.rs  value.rs
tests/: test_kv_store_integration.rs
