[package]
name = "database_from_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
fs2 = "0.4.3"
libc = "0.2.148"
memmap2 = "0.8.0"
lazy_static = "1.4"
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
rand = "0.8.5"
